[gd_scene load_steps=4 format=3 uid="uid://5mi2thhyfu2w"]

[ext_resource type="Script" uid="uid://dho8rhhvgm4kd" path="res://screens/welcome_menu/welcome_menu.gd" id="1_lpduj"]
[ext_resource type="PackedScene" uid="uid://c63ax2yyiebwr" path="res://screens/welcome_menu/user_process_pop_ups/login_pop_up/login_pop_up.tscn" id="2_x35i6"]
[ext_resource type="PackedScene" uid="uid://b1q1dc6ig3yxq" path="res://screens/welcome_menu/user_process_pop_ups/register_pop_up/register_pop_up.tscn" id="3_k1lan"]

[node name="WelcomeMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lpduj")

[node name="WelcomeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 585.0
offset_top = 191.0
offset_right = 1304.0
offset_bottom = 281.0
theme_override_font_sizes/font_size = 65
text = "Welcome ExampleUser"

[node name="ChangeUserBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 701.0
offset_top = 365.0
offset_right = 1113.0
offset_bottom = 463.0
theme_override_font_sizes/font_size = 65
text = "Change User"

[node name="GotoPopUpBtns" type="Control" parent="."]
anchors_preset = 0
offset_left = 713.0
offset_top = 518.0
offset_right = 753.0
offset_bottom = 558.0

[node name="GotoLoginBtn" type="Button" parent="GotoPopUpBtns"]
layout_mode = 0
offset_left = -44.9361
offset_top = 67.6685
offset_right = 133.064
offset_bottom = 165.669
theme_override_font_sizes/font_size = 65
text = "Login"

[node name="GotoRegisterBtn" type="Button" parent="GotoPopUpBtns"]
layout_mode = 0
offset_left = 146.439
offset_top = 69.2545
offset_right = 410.439
offset_bottom = 167.254
theme_override_font_sizes/font_size = 65
text = "Register"

[node name="GotoMenuBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 719.0
offset_top = 812.0
offset_right = 1067.0
offset_bottom = 911.0
theme_override_font_sizes/font_size = 65
text = "goto menu"

[node name="PopUps" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="LoginPopUp" parent="PopUps" instance=ExtResource("2_x35i6")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="RegisterPopUp" parent="PopUps" instance=ExtResource("3_k1lan")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="ChangeUserBtn" to="." method="_on_change_user_btn_pressed"]
[connection signal="pressed" from="GotoPopUpBtns/GotoLoginBtn" to="." method="_on_goto_login_btn_pressed"]
[connection signal="pressed" from="GotoPopUpBtns/GotoRegisterBtn" to="." method="_on_goto_register_btn_pressed"]
[connection signal="pressed" from="GotoMenuBtn" to="." method="_on_goto_menu_btn_pressed"]
